# svg-converter

./: Cargo.toml  README.md  build_wasm.sh
examples/: index.html
src/: lib.rs  main.rs
src/core/: mod.rs  png2svg.rs  svg2png.rs
src/utils/: mod.rs
