[package]
name = "svg-converter"
version = "0.1.0"
edition = "2021"
authors = ["SVG Converter Developer"]
description = "A tool to convert between SVG and PNG formats"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
resvg = "0.35.0"
usvg = "0.35.0"
tiny-skia = "0.10.0"
image = "0.24.6"
svg = "0.13.1"
imageproc = "0.23.0"
clap = { version = "4.3.0", features = ["derive"] }
anyhow = "1.0.71"
svgtypes = "0.11.0"
roxmltree = "0.18.0"
kurbo = "0.11.1"
wasm-bindgen = "0.2"
js-sys = "0.3"
base64 = "0.21"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window"
]

[profile.release]
lto = true
opt-level = "s"
